--- a/translations/admin.es.xlf
+++ b/translations/admin.es.xlf
@@ -2899,5 +2899,59 @@
         <target>Stadt anlegen</target>
       </segment>
     </unit>
+    <unit id="yo6CbZw" name="Avatar">
+      <notes>
+        <note category="german">Avatar</note>
+      </notes>
+      <segment>
+        <source>Avatar</source>
+        <target>Avatar</target>
+      </segment>
+    </unit>
+    <unit id="A2Ihk63" name="Profilbeschreibung">
+      <notes>
+        <note category="german">Profilbeschreibung</note>
+      </notes>
+      <segment>
+        <source>Profilbeschreibung</source>
+        <target>Profilbeschreibung</target>
+      </segment>
+    </unit>
+    <unit id="5AoQtM8" name="Änderungen am Profil verbieten">
+      <notes>
+        <note category="german">Änderungen am Profil verbieten</note>
+      </notes>
+      <segment>
+        <source>Änderungen am Profil verbieten</source>
+        <target>Änderungen am Profil verbieten</target>
+      </segment>
+    </unit>
+    <unit id="o2BjdF6" name="Ändern des Avatars verbieten">
+      <notes>
+        <note category="german">Ändern des Avatars verbieten</note>
+      </notes>
+      <segment>
+        <source>Ändern des Avatars verbieten</source>
+        <target>Ändern des Avatars verbieten</target>
+      </segment>
+    </unit>
+    <unit id="es9o32g" name="Ändern der Profilbeschreibung verbieten">
+      <notes>
+        <note category="german">Ändern der Profilbeschreibung verbieten</note>
+      </notes>
+      <segment>
+        <source>Ändern der Profilbeschreibung verbieten</source>
+        <target>Ändern der Profilbeschreibung verbieten</target>
+      </segment>
+    </unit>
+    <unit id="tJ4N6CO" name="Ändern des Titels verbieten">
+      <notes>
+        <note category="german">Ändern des Titels verbieten</note>
+      </notes>
+      <segment>
+        <source>Ändern des Titels verbieten</source>
+        <target>Ändern des Titels verbieten</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
