--- a/translations/ghost.de.xlf
+++ b/translations/ghost.de.xlf
@@ -1234,5 +1234,41 @@
         <target>Events</target>
       </segment>
     </unit>
+    <unit id="dctQQtZ" name="Der Nachtmodus ist aktiviert und die Straßenbeleuchtung ist verfügbar.">
+      <notes>
+        <note category="german">Der Nachtmodus ist aktiviert und die Straßenbeleuchtung ist verfügbar.</note>
+      </notes>
+      <segment>
+        <source>Der Nachtmodus ist aktiviert und die Straßenbeleuchtung ist verfügbar.</source>
+        <target>Der Nachtmodus ist aktiviert und die Straßenbeleuchtung ist verfügbar.</target>
+      </segment>
+    </unit>
+    <unit id="JeVu4ox" name="Erweitert">
+      <notes>
+        <note category="german">Erweitert</note>
+      </notes>
+      <segment>
+        <source>Erweitert</source>
+        <target>Erweitert</target>
+      </segment>
+    </unit>
+    <unit id="kKT9.CK" name="e8c1841">
+      <notes>
+        <note category="german">Der Nachtmodus ist aktiviert. Die Straßenbeleuchtung steht nicht zur Verfügung.</note>
+      </notes>
+      <segment>
+        <source>Der Nachtmodus ist aktiviert. Die Straßenbeleuchtung steht nicht zur Verfügung.</source>
+        <target>Der Nachtmodus ist aktiviert. Die Straßenbeleuchtung steht nicht zur Verfügung.</target>
+      </segment>
+    </unit>
+    <unit id="1dCs8Np" name="Der Nachtmodus ist deaktiviert.">
+      <notes>
+        <note category="german">Der Nachtmodus ist deaktiviert.</note>
+      </notes>
+      <segment>
+        <source>Der Nachtmodus ist deaktiviert.</source>
+        <target>Der Nachtmodus ist deaktiviert.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
