--- a/translations/global.en.xlf
+++ b/translations/global.en.xlf
@@ -2630,7 +2630,7 @@
       </notes>
       <segment>
         <source>Wer?</source>
-        <target>Wer?</target>
+        <target>Who?</target>
       </segment>
     </unit>
     <unit id="HVAzjFA" name="Namen eingeben">
@@ -2639,7 +2639,7 @@
       </notes>
       <segment>
         <source>Namen eingeben</source>
-        <target>Namen eingeben</target>
+        <target>Enter a name</target>
       </segment>
     </unit>
     <unit id="HAtmchb" name="246b2a2">
@@ -2652,6 +2652,51 @@
                                     &lt;p&gt;&lt;em&gt;Wenn du möchtest, kannst du allerdings weitergraben und ein paar minderwertige Materialien für die verschiedenen Baustellen der Stadt zu Tage fördern..&lt;/em&gt;&lt;/p&gt;</source>
         <target><![CDATA[Die große Anzahl an Erdhaufen und an herumliegenden Müll sind ein Indiz dafür, dass hier wahrscheinlich nichts mehr zu finden ist.
                                     <p><em>Wenn du möchtest, kannst du allerdings weitergraben und ein paar minderwertige Materialien für die verschiedenen Baustellen der Stadt zu Tage fördern..</em></p>]]></target>
+      </segment>
+    </unit>
+    <unit id="mU.wJHS" name="Dein Icon">
+      <notes>
+        <note category="german">Dein Icon</note>
+      </notes>
+      <segment>
+        <source>Dein Icon</source>
+        <target>Your Icon</target>
+      </segment>
+    </unit>
+    <unit id="C.Ht2yK" name="Auswählen">
+      <notes>
+        <note category="german">Auswählen</note>
+      </notes>
+      <segment>
+        <source>Auswählen</source>
+        <target>Choose</target>
+      </segment>
+    </unit>
+    <unit id="GeX4GPW" name="Dein Titel">
+      <notes>
+        <note category="german">Dein Titel</note>
+      </notes>
+      <segment>
+        <source>Dein Titel</source>
+        <target>Your Title</target>
+      </segment>
+    </unit>
+    <unit id="DDEgVcC" name="Deine Beschreibung">
+      <notes>
+        <note category="german">Deine Beschreibung</note>
+      </notes>
+      <segment>
+        <source>Deine Beschreibung</source>
+        <target>Your description</target>
+      </segment>
+    </unit>
+    <unit id="yo6CbZw" name="Avatar">
+      <notes>
+        <note category="german">Avatar</note>
+      </notes>
+      <segment>
+        <source>Avatar</source>
+        <target>Avatar</target>
       </segment>
     </unit>
   </file>
