--- a/translations/soul.de.xlf
+++ b/translations/soul.de.xlf
@@ -2635,5 +2635,107 @@
         <target>Möchtest du diese Koalition verlassen?</target>
       </segment>
     </unit>
+    <unit id="e5CjO7g" name="Ändern des Avatars">
+      <notes>
+        <note category="german">Ändern des Avatars</note>
+      </notes>
+      <segment>
+        <source>Ändern des Avatars</source>
+        <target>Ändern des Avatars</target>
+      </segment>
+    </unit>
+    <unit id="Ag772xl" name="c97e118">
+      <notes>
+        <note category="german">Du kannst deinen Avatar nicht mehr bearbeiten. Falls du aktuell einen Avatar hast, kannst du diesen jedoch löschen.</note>
+      </notes>
+      <segment>
+        <source>Du kannst deinen Avatar nicht mehr bearbeiten. Falls du aktuell einen Avatar hast, kannst du diesen jedoch löschen.</source>
+        <target>Du kannst deinen Avatar nicht mehr bearbeiten. Falls du aktuell einen Avatar hast, kannst du diesen jedoch löschen.</target>
+      </segment>
+    </unit>
+    <unit id="sXIofxl" name="Ändern des Profiltitels">
+      <notes>
+        <note category="german">Ändern des Profiltitels</note>
+      </notes>
+      <segment>
+        <source>Ändern des Profiltitels</source>
+        <target>Ändern des Profiltitels</target>
+      </segment>
+    </unit>
+    <unit id="Gw1mlg1" name="0a58461">
+      <notes>
+        <note category="german">Du kannst deinen deinen Profil-Titel sowie Icon nicht länger ändern. Wenn du aktuell einen Titel oder ein Icon gesetzt hast, kannst du diese jedoch entfernen.</note>
+      </notes>
+      <segment>
+        <source>Du kannst deinen deinen Profil-Titel sowie Icon nicht länger ändern. Wenn du aktuell einen Titel oder ein Icon gesetzt hast, kannst du diese jedoch entfernen.</source>
+        <target>Du kannst deinen deinen Profil-Titel sowie Icon nicht länger ändern. Wenn du aktuell einen Titel oder ein Icon gesetzt hast, kannst du diese jedoch entfernen.</target>
+      </segment>
+    </unit>
+    <unit id="U8rWfCJ" name="Ändern der Profilbeschreibung">
+      <notes>
+        <note category="german">Ändern der Profilbeschreibung</note>
+      </notes>
+      <segment>
+        <source>Ändern der Profilbeschreibung</source>
+        <target>Ändern der Profilbeschreibung</target>
+      </segment>
+    </unit>
+    <unit id="Z7.2LZ_" name="17aace6">
+      <notes>
+        <note category="german">Du kannst deine Profilbeschreibung nicht länger ändern. Eine bestehende Profilbeschreibung kann jedoch gelöscht werden.</note>
+      </notes>
+      <segment>
+        <source>Du kannst deine Profilbeschreibung nicht länger ändern. Eine bestehende Profilbeschreibung kann jedoch gelöscht werden.</source>
+        <target>Du kannst deine Profilbeschreibung nicht länger ändern. Eine bestehende Profilbeschreibung kann jedoch gelöscht werden.</target>
+      </segment>
+    </unit>
+    <unit id="j5yXkX6" name="Kein Icon">
+      <notes>
+        <note category="german">Kein Icon</note>
+      </notes>
+      <segment>
+        <source>Kein Icon</source>
+        <target>Kein Icon</target>
+      </segment>
+    </unit>
+    <unit id="FjAvXSr" name="Du hast noch kein Icon freigeschaltet!">
+      <notes>
+        <note category="german">Du hast noch kein Icon freigeschaltet!</note>
+      </notes>
+      <segment>
+        <source>Du hast noch kein Icon freigeschaltet!</source>
+        <target>Du hast noch kein Icon freigeschaltet!</target>
+      </segment>
+    </unit>
+    <unit id="s98CmDi" name="Kein Titel">
+      <notes>
+        <note category="german">Kein Titel</note>
+      </notes>
+      <segment>
+        <source>Kein Titel</source>
+        <target>Kein Titel</target>
+      </segment>
+    </unit>
+    <unit id="UWvnfeW" name="Dein Avatar">
+      <notes>
+        <note category="german">Dein Avatar</note>
+      </notes>
+      <segment>
+        <source>Dein Avatar</source>
+        <target>Dein Avatar</target>
+      </segment>
+    </unit>
+    <unit id="FFE77tY" name="fd22293">
+      <notes>
+        <note category="german">Wähle aus, welcher Teil deines Profilbilds für die komprimierte Darstellung verwendet werden soll.
+                                                    Bewege den Ausschnitt mit der Maus und vergrößere oder verkleinere ihn mit dem Mausrad.</note>
+      </notes>
+      <segment>
+        <source>Wähle aus, welcher Teil deines Profilbilds für die komprimierte Darstellung verwendet werden soll.
+                                                    Bewege den Ausschnitt mit der Maus und vergrößere oder verkleinere ihn mit dem Mausrad.</source>
+        <target>Wähle aus, welcher Teil deines Profilbilds für die komprimierte Darstellung verwendet werden soll.
+                                                    Bewege den Ausschnitt mit der Maus und vergrößere oder verkleinere ihn mit dem Mausrad.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
