--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -18570,7 +18570,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Diese Information gibt dir einen Hinweis darauf, ob Aufklärer gewöhnlicherweise hier vorbeikommen.&lt;br /&gt;&lt;em&gt;Je mehr eine Zone erforscht wurde, desto geringer ist die Chance bei &lt;strong&gt;Betreten&lt;/strong&gt; entdeckt zu werden (du kennst dann ein paar Schleichwege etc...).&lt;/em&gt;</source>
-        <target><![CDATA[Diese Information gibt dir einen Hinweis darauf, ob Aufklärer gewöhnlicherweise hier vorbeikommen.<br /><em>Je mehr eine Zone erforscht wurde, desto geringer ist die Chance bei <strong>Betreten</strong> entdeckt zu werden (du kennst dann ein paar Schleichwege etc...).</em>]]></target>
+        <target><![CDATA[This information tells you if scouts regularly pass through this sector.<br /><em>The better known the sector is, the less likely you are to be discovered <strong>when you enter it</strong> (because you know some concealed paths through the zone; etc...)</em>]]></target>
       </segment>
     </unit>
     <unit id="JxANNhs" name="Versuchen etwas zu stehlen">
