--- a/translations/help.en.xlf
+++ b/translations/help.en.xlf
@@ -6164,7 +6164,7 @@ Sobald die Liste einmal erstellt wurde, kann sie nicht mehr geändert werden!</n
         <source>Du kannst hier eine Liste mit mindestens 39 Spielern anlegen und ihnen damit einen Platz in deiner Stadt reservieren.
 Alle Pseudonyme müssen korrekt geschrieben und mit einem Komma getrennt sein (Leerzeichen werden ignoriert).
 Sobald die Liste einmal erstellt wurde, kann sie nicht mehr geändert werden!</source>
-        <target>You can enter a list of 39 players (minimum) when you create a town, so that everyone has a place reserved. Each nickname must be spelt correctly and separated by a comma (spaces are ignored). Once the town has been created, the list can no longer be modified!</target>
+        <target>You can enter a list of players when you create a town, so that everyone has a place reserved. Once the town has been created, the list can no longer be modified!</target>
       </segment>
     </unit>
     <unit id="lWrXfCk" name="Beispiel: &lt;em&gt;spieler01, spieler02, blafasel_99&lt;/em&gt;">
@@ -6173,7 +6173,7 @@ Sobald die Liste einmal erstellt wurde, kann sie nicht mehr geändert werden!</s
       </notes>
       <segment>
         <source>Beispiel: &lt;em&gt;spieler01, spieler02, blafasel_99&lt;/em&gt;</source>
-        <target><![CDATA[Example: <em>player01, player02, thingy_from_chicago</em>]]></target>
+        <target><![CDATA[Instead of picking players manually, you can also paste a list into the search field. Example: <em>player01, player02, thingy_from_chicago</em>]]></target>
       </segment>
     </unit>
     <unit id="NyknCVn" name="4a21474">
